Rabbit entity refactor (#925)
Several code improvements were implemented. The DTO classes have been moved to their appropriate packages, improving code organization. Changes in some areas of the code improved the use of Lombok for simplification. A few test changes were performed to enhance reliability, introducing awaitility for condition-based waiting. This commit also adjusts the data type for more accurate comparisons in tests.

* Make product classes Serializable

Added Serializable interface to the 'ProductSummary', 'ProductPackSizes', 'BrandWithIdentifiers', 'ProductBrands' and 'ExternalIdentifier' classes. These changes allow storing instances of these classes in a serialized form or transferring them over a network and de-serializing them when necessary.

The code deletes the `MinimalTicketDto` class as it was deemed unnecessary. Various DTO classes in the `ticket` package have been updated with additional annotations. The major change is the addition of the `@ToString` annotation, which includes superclass fields in the output. Other adjustments include shuffling of existing annotations and the usage of `@SuperBuilder` in some case which overrides the regular `@Builder` usage.

* Add getComments API endpoint and mapping functions

A getComments endpoint has been added to the CommentController, allowing retrieval of all comments on a ticket. CommentMapper was updated to create a function that converts a list of Comment objects to a list of CommentDto objects. This change supports the serialization of Comment objects to CommentDto when fetching comments from the database and sending the response to the client.

* Add exception handling in MedicationNewBrandPackTest

An import for SingleConceptExpectedProblem exception has been added, and the product model retrieval process within the test now includes a try-catch block. This modification was made to handle SingleConceptExpectedProblem exceptions that may occur when retrieving the product model.